# fear-protocol

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
fear_protocol/: __init__.py
fear_protocol/agent/: __init__.py  api.py  schemas.py
fear_protocol/backtest/: __init__.py  engine.py  report.py
fear_protocol/cli/: __init__.py  main.py  output.py
fear_protocol/cli/commands/: backtest.py  run.py  signal.py  status.py
fear_protocol/core/: __init__.py  math.py  models.py
fear_protocol/data/: __init__.py  base.py  fear_greed.py  historical.py  price.py
fear_protocol/exchanges/: __init__.py  base.py  hyperliquid.py  mock.py  paper.py
fear_protocol/state/: __init__.py  manager.py  models.py
fear_protocol/strategies/: __init__.py  base.py  fear_greed_dca.py  grid_fear.py  momentum_dca.py
tests/: conftest.py
tests/integration/: test_backtest_engine.py
tests/unit/: test_agent_api.py  test_agent_schemas.py  test_backtest_engine.py  test_backtest_report.py  test_core_math.py  test_core_models.py  test_data_providers.py  test_exchanges_init.py  test_exchanges_mock.py  test_exchanges_paper.py  test_state_manager.py  test_strategies_extra.py  test_strategies_fear_greed_dca.py  test_strategies_grid_fear.py  test_strategies_init.py  test_strategies_momentum_dca.py
